test/files/neg/sip23-uninitialized-1.scala
//> using options -Xfatal-warnings
//
object Test {
  val f1: 1 = f1   // warning: recursive
}
