test/files/neg/sip23-uninitialized-1.check
sip23-uninitialized-1.scala:4: warning: value f1 in object Test does nothing other than call itself recursively
  val f1: 1 = f1   // warning: recursive
              ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
